# haskell-nim

./: .gitignore  CHANGELOG.md  LICENSE  haskell-nim.cabal
app/: Computer.hs  Configuration.hs  Game.hs  Main.hs  Model.hs
