cabal-version:      2.4
name:               haskell-nim
version:            0.1.0.1

-- A short (one-line) description of the package.
synopsis: Nim game

-- A longer description of the package.
description:
Game rules:
    - 2 players game
    - Board is composed of N rows of M matchsticks (M variable for each row)
    - Player could remove any number of matchsticks from a single row only
    - Winner is the player who removes the last matchsticks

Game configuration:
    - At start, it has been asked to define the desired configuration for the game although default settings are being proposed
    - Settings: nb of rows (minimum is 3), composition of rows (nb of sticks for each row), character symbol to use for displaying a single stick on the game board
    - An option has been added to allow playing against computer. In that case, computer will be Player 2.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             greenterra
-- maintainer:         

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-nim
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Model, Configuration, Game, Computer

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0, mtl, ansi-terminal

    hs-source-dirs:   app
    default-language: Haskell2010
